Fix alignment of main elements

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
 
 body {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 5fr;
     gap: 50px;
 }
 
@@ -21,6 +21,15 @@ header {
     padding-right: 40px;
     background-color: black;
     color: white;
+    max-width: 300px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 50px;
+    margin-right: 100px;
 }
 
 h1, h2, h3 {
@@ -37,12 +46,23 @@ h2 {
 
 p {
     font-family: 'Prompt', sans-serif;
+    font-size: 1.2em;
 }
 
-ol {
+ul {
     list-style-type: none;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     gap: 20px;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    padding: 0;
+    margin: 0;
+    width: 500px;
 }
 
 img {
